--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#Don't ignore anything with dots
+*
+!*.*
+!*/
+
 #Binary and Image
 **.exe
 **.png
@@ -207,4 +212,8 @@ MYMETA.yml
 nytprof.out
 pm_to_blib
 
-
+##Cfg symlinks
+**.cfg
+docker_stderror
+DeepESMCfg*
+TopTaggerCfg*
