Setup configure to get fastjet libs and link up

--- a/Analyzer/test/Makefile.in
+++ b/Analyzer/test/Makefile.in
@@ -2,6 +2,9 @@
 TENSORFLOW_DIR = @TENSORFLOWDIR@
 TENSORFLOWLIBS = @TENSORFLOWLIBS@
 
+FASTJET_DIR = @FASTJETDIR@
+FASTJETLIBS = @FASTJETLIBS@
+
 CXX      = @CXX@
 LD       = @CXX@
 CXXFLAGS = @CXXFLAGS@
@@ -45,6 +48,12 @@ ifdef TENSORFLOW_DIR
 	INCLUDESDIRS += -I$(TENSORFLOW_DIR)/include
 	CXXFLAGS     += -DDOTENSORFLOW
 	LIBS         += -L$(TENSORFLOW_DIR)/lib $(TENSORFLOWLIBS)
+endif
+
+# Fastjet includes and libraries
+ifdef FASTJET_DIR
+	INCLUDESDIRS += -I$(FASTJET_DIR)/include
+	LIBS         += -L$(FASTJET_DIR)/lib $(FASTJETLIBS)
 endif
 
 # Include our code
